bugfix/DTTSB-41: fixing Download icon on IE11

--- a/css/style-sass.css
+++ b/css/style-sass.css
@@ -7604,13 +7604,11 @@ Styleguide file
   text-align: center; }
   .file__icon:before {
     color: #b3b4b5;
-    font-size: 2.778em; }
-  .file__icon:before {
     font-size: 2.556em; }
   @media (max-width: 650px) {
     .file__icon:before {
       font-size: 1.556em;
-      font-size: 7.0833333333vw !important; } }
+      font-size: 7.0833333333vw; } }
 
 .file__metadata {
   line-height: 1;
@@ -7817,9 +7815,6 @@ Styleguide filters.filters
   .filters__btn-reset--small,
   .filters__btn-collapse {
     display: none; } }
-
-.views-exposed-form .views-exposed-widget {
-  padding: 0; }
 
 /*
 Footer
